# printrsrgb

./: Cargo.toml  LICENSE  __init__.py  __main__.py  lib.rs  main.py  printrgb1.py  printrsrgb.py  printrsrgb1.py  pyproject.toml  test.py
src/: lib.rs
src/printrsrgb/: __init__.py  __main__.py  printrsrgb.py
