[package]
name = "printrsrgb"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "Rust-powered Python package for rainbow colors"
license = "MIT"

[lib]
name = "core"
crate-type = ["cdylib"] 
[dependencies]
pyo3 = { version = "0.28.0", features = ["extension-module"] }
crossterm = "0.29.0"